feat: add shared chemical systems generator
